2011-05-09  Thomas Adam <thomas@fvwm.org>
	* screenshots/desktops/Susanne_Schmidt-fvwmbrown-1000x750:
	* screenshots/desktops/Susanne_Schmidt-shotgreen-900x889:
	Clarified description; "patched FVWM" needed.

2011-05-05  Thomas Adam <thomas@fvwm.org>
	* screenshots/desktops/Susanne_Schmidt-fvwmbrown-1000x750:
	* screenshots/desktops/Susanne_Schmidt-shotgreen-900x889:
	Added screenshots from Susanne.

2011-04-17  Thomas Adam <thomas@fvwm.org>
	* download/index.php:
	Remove reference to bug tracker.

2011-04-16  Thomas Adam <thomas@fvwm.org>
	* documentation/manpages/stable:
	* index.php:
	* definitions.inc:
	Regenerate files for 2.6.1

2011-04-15  Thomas Adam <thomas@fvwm.org>
	* documentation/manpages/stable:
	Regenerate against a stable source tree, and not unstable.

	This corrects any version numbers on the generated files.

2011-04-15  Thomas Ada, <thomas@fvwm.org>
	* screenshots/desktops/screenshot_db.inc:
	* screenshots/desktops/Christine-blackandgrey-1600x1200:
	* screenshots/desktops/Christine-fukation-1400x1050:
	* screenshots/desktops/Christine-glassy-1024x768:
	* screenshots/desktops/Christine-international-1400x1050:
	* screenshots/desktops/Christine-toogrey-1024x768:
	* screenshots/desktops/Christine-untitled-1600x1200:
	Added screenshots from Christine.

2011-04-15  Thomas Adam <thomas@fvwm.org>
	* documentation/manpages/manpages2php:
	* documentation/manpages/stable:
	* documentation/manpages/unstable:
	* documentation/manpages/index.php:
	Update various files, and regenerate .php files now that 2.6.0 is stable
	as there's a lot of hard-coded assumptions on 2.4.X still.

2011-04-15  Thomas Adam <thomas@fvwm.org>
	* news/index.php:
	* doc/unstable:
	* documentation/manpages/unstable:
	Regenerated for 2.6.0/2.7.0 release.

2011-01-29  Thomas Adam <thomas@fvwm.org>
	* documentation/faq/index.php:
	Updated to reflect addition of #3.30

2010-10-08  Thomas Adam <thomas@fvwm.org>
	* documentation/manpages/unstable:
	Regenerated to remove erroneous link.
