@@ -1,3 +1,8 @@
+2011-05-15  Thomas Adam <thomas@fvwm.org>
+	* download/index.php:
+	Remove any mention of RPM/DEB packages.  They've not been updated  in
+	ages, and doing so is pointless given downstream's packaging techniques.
+
 2011-05-09  Thomas Adam <thomas@fvwm.org>
 	* screenshots/desktops/Susanne_Schmidt-fvwmbrown-1000x750:
 	* screenshots/desktops/Susanne_Schmidt-shotgreen-900x889:
